--- a/Javaweb/css/main.css
+++ b/Javaweb/css/main.css
@@ -1,12 +1,13 @@
 body{
 	font-size: 0.875rem;
 	font-family: '微软雅黑';
-	width: 100%;
+	max-width: 100%;
+    min-width: 1450px;
 	height: 900X;
 } 
 /* 头部 */
 .head{
-	min-width: 100%;
+	min-width: 1450px;
 	max-width: 100%;
 	height: 10rem;
 	position: relative;
@@ -59,7 +60,6 @@ form{
 	border:2px solid #F00;
 }
 	/* 视频 */
-/* 头部 */
 /* 上一步 */
 form .icon {
 	width: 100%;
@@ -109,6 +109,8 @@ form .icon .icon-arrow-2{
 	left: 210px;
 }
 /* 上一步 */
+/* 头部 */
+
 /* 英雄图片 */
 form .class_two{
 	width: 100%;
